public/stylesheets/mixer2050/application.css
/* ... */
      body.mixer2050#pages_home section#main #chart header strong {
        font-weight: bold; }
    body.mixer2050#pages_home section#main #chart .chart_canvas_mix {
      width: 80px; }
  body.mixer2050#pages_home section#main #map {
    margin-top: 20px;
    position: relative;
    width: 672px;
    height: 386px;
    background: url("/images/layout/map_of_the_netherlands.png"); }
    body.mixer2050#pages_home section#main #map #sector_icons div.sector {
      position: absolute; }
      body.mixer2050#pages_home section#main #map #sector_icons div.sector .popup {
        opacity: 0.9;
        background-color: white;
        position: absolute;
        z-index: 10;
        background-color: #fefffe;
        filter: progid:DXImageTransform.Microsoft.gradient(GradientType=0, startColorstr="#fefffe"}, endColorstr="#e9e9e9");
        background-image: -moz-linear-gradient(center top, #fefffe, #e9e9e9);
        background-image: -webkit-gradient(linear, 0% 0%, 0% 100%, from(#fefffe), to(#e9e9e9));
        border: 1px solid #fefffe;
        -moz-box-shadow: 0px 2px 8px #d8d8d8;
        -webkit-box-shadow: 0px 2px 8px #d8d8d8;
        box-shadow: 0px 2px 8px #d8d8d8;
        -ms-filter: "progid:DXImageTransform.Microsoft.Shadow(Strength=2, Direction=180, Color='#d8d8d8')";
        filter: progid:DXImageTransform.Microsoft.Shadow(Strength=2, Direction=180, Color='$color'); }
        body.mixer2050#pages_home section#main #map #sector_icons div.sector .popup a.description {
          display: block;
          bottom: -10px;
          padding: 5px;
          color: #003478;
          font-weight: bold;
          padding-right: 25px;
          background-image: url("/images/icons/i.png");
          background-repeat: no-repeat;
          background-position: 95% center; }
        body.mixer2050#pages_home section#main #map #sector_icons div.sector .popup a.close_description {
          background-image: url("/images/icons/close.png"); }
        body.mixer2050#pages_home section#main #map #sector_icons div.sector .popup .text {
          width: 300px;
          padding: 10px; }
    body.mixer2050#pages_home section#main #map #sector_icons #buildings {
      background: url("/images/layout/buildings_icon.png");
      width: 102px;
      height: 75px;
      left: 500px;
      top: 20px; }
    body.mixer2050#pages_home section#main #map #sector_icons #agriculture {
      background: url("/images/layout/agriculture_icon.png");
      width: 121px;
      height: 71px;
      left: 300px;
      top: 202px; }
    body.mixer2050#pages_home section#main #map #sector_icons #industry {
      background: url("/images/layout/industry_icon.png");
      width: 124px;
      height: 89px;
      left: 168px;
      top: 110px; }
    body.mixer2050#pages_home section#main #map #sector_icons #transport {
      background: url("/images/layout/transport_icon.png");
      width: 124px;
      height: 60px;
      top: 110px;
      left: 319px; }
    body.mixer2050#pages_home section#main #map #sectors {
      position: absolute;
      left: 0;
      top: 0;
      width: 220px;
      float: left; }
      body.mixer2050#pages_home section#main #map #sectors .sector {
        margin: 2px 4px;
        width: 100px;
        float: left; }

body.mixer2050#scenarios_new section#left {
  width: 440px;
  margin-right: 8px;
  float: left; }
  body.mixer2050#scenarios_new section#left section#questions {
    width: auto;
    background-color: #fefffe;
    filter: progid:DXImageTransform.Microsoft.gradient(GradientType=0, startColorstr="#fefffe"}, endColorstr="#e9e9e9");
    background-image: -moz-linear-gradient(center top, #fefffe, #e9e9e9);
    background-image: -webkit-gradient(linear, 0% 0%, 0% 100%, from(#fefffe), to(#e9e9e9));
    border: 1px solid #fefffe;
    -moz-box-shadow: 0px 2px 8px #d8d8d8;
    -webkit-box-shadow: 0px 2px 8px #d8d8d8;
    box-shadow: 0px 2px 8px #d8d8d8;
    -ms-filter: "progid:DXImageTransform.Microsoft.Shadow(Strength=2, Direction=180, Color='#d8d8d8')";
    filter: progid:DXImageTransform.Microsoft.Shadow(Strength=2, Direction=180, Color='$color');
    height: 430px;
    overflow: auto; }
    body.mixer2050#scenarios_new section#left section#questions nav#up {
      background-color: #fefffe;
      filter: progid:DXImageTransform.Microsoft.gradient(GradientType=0, startColorstr="#fefffe"}, endColorstr="#e9e9e9");
      background-image: -moz-linear-gradient(center top, #fefffe, #e9e9e9);
      background-image: -webkit-gradient(linear, 0% 0%, 0% 100%, from(#fefffe), to(#e9e9e9));
      border: 1px solid #fefffe;
      -moz-box-shadow: 0px 2px 8px #d8d8d8;
      -webkit-box-shadow: 0px 2px 8px #d8d8d8;
      box-shadow: 0px 2px 8px #d8d8d8;
      -ms-filter: "progid:DXImageTransform.Microsoft.Shadow(Strength=2, Direction=180, Color='#d8d8d8')";
      filter: progid:DXImageTransform.Microsoft.Shadow(Strength=2, Direction=180, Color='$color'); }
    body.mixer2050#scenarios_new section#left section#questions .question .info {
      padding-left: 3px;
      position: relative; }
      body.mixer2050#scenarios_new section#left section#questions .question .info .information {
        display: none;
        position: absolute;
        top: 30px;
        left: 0;
        background-color: #fefffe;
        filter: progid:DXImageTransform.Microsoft.gradient(GradientType=0, startColorstr="#fefffe"}, endColorstr="#e9e9e9");
        background-image: -moz-linear-gradient(center top, #fefffe, #e9e9e9);
        background-image: -webkit-gradient(linear, 0% 0%, 0% 100%, from(#fefffe), to(#e9e9e9));
        border: 1px solid #fefffe;
        -moz-box-shadow: 0px 2px 8px #d8d8d8;
        -webkit-box-shadow: 0px 2px 8px #d8d8d8;
        box-shadow: 0px 2px 8px #d8d8d8;
        -ms-filter: "progid:DXImageTransform.Microsoft.Shadow(Strength=2, Direction=180, Color='#d8d8d8')";
        filter: progid:DXImageTransform.Microsoft.Shadow(Strength=2, Direction=180, Color='$color'); }
/* ... */

